@@ -1,5 +1,6 @@
 0.0.8
  - fix: force restart of DCOR-Aid upon wizard end
+ - fix: improve handling of cache and config directories
 0.0.7
  - fix: allow resuming when upload fails (#3)
  - fix: start even if DCOR is down
